# poisson-multigrid

./: .gitmodules  .travis.yml  CMakeLists.txt
include/: multigrid.hpp
scripts/: part1plots.py  poisson.py  v-cycle.py
src/: bindpy.cpp  multigrid.cpp  test.cpp
